# tui01

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/02-control-isolation-and-enum-unification/: 02-01-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md
.planning/phases/03-custom-control-extension/: 03-02-SUMMARY.md
.planning/phases/04-module-hierarchy-restructuring/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-VERIFICATION.md
.planning/phases/05-large-file-decomposition/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md
.planning/phases/06-extension-points-and-public-api/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: GETTING_STARTED.md  MIGRATION.md  RELEASE_CHECKLIST.md  RELEASE_SCOPE.md  VERSIONING.md
examples/: demo.lua  demo.yaml  from_config.rs  host_app.yaml  host_template.rs
src/: action.rs  app.rs  builder.rs  config.rs  event.rs  executor.rs  field.rs  framework_log.rs  host.rs  lib.rs  main.rs  prelude.rs  runtime.rs  schema.rs  showcase.rs  theme.rs  tui.rs
src/app/: action.rs  app_impl.rs  mod.rs
src/app/showcase/: mod.rs  operation_poll.rs  screen_manager.rs  tea_core.rs
src/components/: content_panel.rs  controls.rs  menu.rs  mod.rs  quadrant.rs  status_panel.rs  title_panel.rs
src/components/content_panel/: interaction.rs  layout.rs  mod.rs  operations.rs  render.rs
src/components/controls/: mod.rs  number_input.rs  select.rs  text_input.rs  toggle.rs
src/controls/: action_button.rs  control_trait.rs  data_display.rs  helpers.rs  log_output.rs  mod.rs  number_input.rs  select.rs  text_input.rs  toggle.rs
src/host/: framework_log.rs  host_types.rs  mod.rs
src/host/executor/: executor_core.rs  mod.rs  registry.rs  shell.rs  types.rs
src/infra/: mod.rs  tui.rs
src/runtime/: mod.rs
src/spec/: builder.rs  field.rs  mod.rs  schema.rs
templates/host_project/: README.md  actions.rs  app.rs  app.yaml  host.rs  main.rs
