[package]
name = "tui01"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ratatui = { version = "0.30.0", features = ["serde"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rstest = "0.24"
serde_json = "1"
