[package]
name = "tui01"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Rust TUI framework for fixed four-quadrant tools with declarative screens and host-controlled side effects."
readme = "README.md"
repository = "https://github.com/0antinomia/tui01"
homepage = "https://github.com/0antinomia/tui01"
documentation = "https://docs.rs/tui01"
rust-version = "1.93"
keywords = ["tui", "terminal", "ratatui", "framework"]
categories = ["command-line-interface"]
include = [
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/src/**",
    "/examples/host_template.rs",
    "/docs/GETTING_STARTED.md",
    "/docs/VERSIONING.md",
]

[dependencies]
ratatui = { version = "0.30.0", features = ["serde"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rstest = "0.24"
serde_json = "1"
